# AI-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  100_PERCENT_COMPLETE.md  ACTION_BOARD_README.md  AGENT_ORG_CHART_DESIGN.md  ARCHITECTURE_REVIEW_PROMPTS.md  BACKLOG.md  CLAUDE_ARCHITECTURE_EVALUATION.md  CODE_APPLICATION_GUIDE.md  CODE_OF_CONDUCT.md  CODE_WEAVER_PRO_GUIDE.md  COMPETITIVE_ANALYSIS_2026.md  COMPLETE_UI_EVALUATION.md  COMPLETE_UX_EVALUATION.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  DOCKER_README.md  Dockerfile  ERROR_LOGGING_IMPROVEMENTS.md  FEATURE_MATRIX.md  FOREVER_FIELDS_AUDIT_REPORT.html  GRADIO_IMPLEMENTATION_ROADMAP.md  GRADIO_PLATFORM_ASSESSMENT.md  GRADIO_PROJECTS_IMPLEMENTATION.md  GRADIO_UI_EVALUATION.md  GRADIO_UI_IMPLEMENTATION.md  GRADIO_UX_EVALUATION.txt  GRAPHVIZ_SETUP.md  HOW_TO_RUN_AGENT_REVIEW.md  HUMAN_APPROVAL_CHECKPOINTS.md  IDIOT_PROOF_UX_PATTERNS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_PLAN_WEEK1.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_GUIDE_ENHANCED.md  MARKET_DRIVEN_UI_EVALUATION.md  (+74 more)
.github/: pull_request_template.md
agent_cache/: __init__.py_14a4deb902eeccd2_ui_ux.pkl  agent_collaboration_view.py_aa1c9483d4d1b5e7_ui_ux.pkl  constants.py_4e508f01d6853b08_ui_ux.pkl  enhanced_interface_execution.py_d69256419fe4927d_ui_ux.pkl  enhanced_interface_input.py_f34bafd71355780b_ui_ux.pkl  enhanced_interface_results.py_59bec001925abd88_ui_ux.pkl  github_export.py_49c72dbf2fc90912_ui_ux.pkl  live_terminal.py_d86c499e00cbd89a_ui_ux.pkl  loading_states.py_29af7d9e15177ecc_ui_ux.pkl  main_interface.py_dca21de87b4a4e84_ui_ux.pkl  main_interface_enhanced.py_e5a7fd804b41dd48_ui_ux.pkl  onboarding.py_50b7b52fb8dad179_ui_ux.pkl  onboarding.py_6301ad008a2cf7fa_ui_ux.pkl  progress_tracker.py_6ccc5bebbf9f7cc7_ui_ux.pkl  results_display.py_a5ad51acae4ccb1b_ui_ux.pkl  self_improvement.py_b438accd656b9fe7_ui_ux.pkl
api/: __init__.py  requirements.txt  server.py
apps/: README.md
audit-capture-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
audit-tools/: README.md  accessibility_audit.py  client_portal_template.html  lighthouse_batch.py  prototype_generator.py  report_generator.py  sample_prototype.html  (+2 more)
(+428 files in other folders)
